--- a/src/app/screens/resume/components/personal-card/personal-card.component.html
+++ b/src/app/screens/resume/components/personal-card/personal-card.component.html
@@ -1,7 +1,7 @@
 <mat-card class="mat-mdc-elevation-specific mat-elevation-z6 overflow-hidden">
   <div class="row m-0">
-    <div class="image col-5 p-0" [style.background-image]="'url(' + imageUrl + ')'"></div>
-    <div class="about col-7 p-0">
+    <div class="image col-12 col-md-5 p-0" [style.background-image]="'url(' + imageUrl + ')'"></div>
+    <div class="about col-12 col-md-7 p-0">
       <div class="d-flex flex-column justify-content-between h-100">
         <div class="m-auto px-4 pt-3 w-100">
           <div class="h3">
