Added shadows to the footer

--- a/src/app/screens/resume/resume-screen.component.html
+++ b/src/app/screens/resume/resume-screen.component.html
@@ -1,4 +1,4 @@
-<header class="mat-mdc-elevation-specific mat-elevation-z2 overflow-hidden">
+<header class="mat-elevation-z2 overflow-hidden">
   <!-- Snow -->
   <div class="snow"></div>
   <!-- /Snow -->
@@ -104,7 +104,7 @@
   </section>
 </main>
 
-<footer class="mat-mdc-elevation-specific mat-elevation-z2 overflow-hidden pt-5">
+<footer class="overflow-hidden pt-5">
   <!-- Snow -->
   <div class="snow"></div>
   <!-- /Snow -->
