--- a/src/app/screens/resume/resume-screen.component.scss
+++ b/src/app/screens/resume/resume-screen.component.scss
@@ -75,6 +75,13 @@ section.resume-brands-section {
   }
 }
 
+/** Footer */
+footer {
+  box-shadow: 0 -3px 1px -2px #0003,
+              0 -2px 2px      #00000024,
+              0 -1px 5px      #0000001f;
+}
+
 /** Material Design Restyle */
 
 .mat-mdc-progress-spinner {
