Разделение интерфейсов ResumeSkill и ResumeTool

--- a/src/app/screens/resume/components/skill-spinners/skill-spinners.component.html
+++ b/src/app/screens/resume/components/skill-spinners/skill-spinners.component.html
@@ -1,4 +1,4 @@
-<mat-card class="resume-skills-card mat-mdc-elevation-specific mat-elevation-z6 overflow-hidden h-100">
+<mat-card class="mat-elevation-z6 overflow-hidden h-100">
   <mat-card-header>
     <mat-card-title>Основные навыки</mat-card-title>
     <mat-card-subtitle>Skills</mat-card-subtitle>
