--- a/src/app/screens/resume/resume-screen.component.html
+++ b/src/app/screens/resume/resume-screen.component.html
@@ -78,7 +78,7 @@
         <app-skill-spinners [skills]="resume?.skills"></app-skill-spinners>
       </div>
       <div class="col-12 col-md-6 pb-5">
-        <app-skill-progress-bars [skills]="resume?.tools"></app-skill-progress-bars>
+        <app-tool-progress-bars [tools]="resume?.tools"></app-tool-progress-bars>
       </div>
     </div>
   </section>
