Удаление CSS-класса "mat-mdc-elevation-specific"

--- a/src/app/screens/resume/components/about-card/about-card.component.html
+++ b/src/app/screens/resume/components/about-card/about-card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="mat-mdc-elevation-specific mat-elevation-z6 overflow-hidden">
+<mat-card class="mat-elevation-z6 overflow-hidden">
   <mat-card-header>
     <mat-card-title>Немного о себе</mat-card-title>
     <mat-card-subtitle>About me</mat-card-subtitle>
